--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,9 @@ dependencies {
         exclude group: 'org.apache.geronimo.specs', module:'geronimo-annotation_1.0_spec'
     }
 
+    // jedis
+    compile group: 'redis.clients', name: 'jedis', version: '2.8.2'
+
     // local library of project
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
