--- a/build.gradle
+++ b/build.gradle
@@ -1,103 +1,27 @@
-group 'com.aboutcoder.packease.utils'
-version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
+apply from: 'base/config.gradle'
 
 sourceCompatibility = 1.6
 
-repositories {
-    // By default, mavenLocal() queries maven settings according to the specific orders below.
-    // "USER_HOME/.m2/settings.xml >> M2_HOME/conf/settings.xml >> USER_HOME/.m2/repository"
-    //
-    // Under the *nix/macOS environments, you could make a soft link to your local maven settings like this:
-    // "ln -s /Users/[username]/Applications/Maven/3.0.5/conf/settings.xml /Users/[username]/.m2/settings.xml"
-    //
-    // Follow the tips above, you will absolutely resolve the unreachable problem of mavenLocal().
-    mavenLocal()
-    mavenCentral()
-    // jcenter() // jcenter maven repository may not be connected sometimes because of network issues in China.
-}
+subprojects {
+    apply plugin: 'java'
 
-dependencies {
-    // slf4j log framework
-    compile 'org.slf4j:slf4j-api:1.7.21'
-
-    // spring framework
-    compile 'org.springframework:spring-context:4.3.2.RELEASE'
-    compile 'org.springframework:spring-jdbc:4.3.2.RELEASE'
-    compile 'org.springframework:spring-aspects:4.3.2.RELEASE'
-    compile 'org.springframework:spring-jms:4.3.2.RELEASE'
-
-    // google guava
-    compile 'com.google.guava:guava:19.0'
-
-    // google gson
-    // compile 'com.google.code.gson:gson:2.3.1'
-
-    // fastjson
-    compile 'com.alibaba:fastjson:1.2.16'
-
-    // druid db connections' pool
-    compile 'com.alibaba:druid:1.0.26'
-
-    // fasterxml
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.2'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.2'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.8.2'
-
-    // json-xml converter
-    compile 'de.odysseus.staxon:staxon:1.3'
-
-    // apache common methods library
-    compile 'org.apache.commons:commons-lang3:3.4'
-
-    // apache common codec
-    compile 'commons-codec:commons-codec:1.10'
-
-    // togglz framework
-    compile 'org.togglz:togglz-core:2.2.0.Final'
-
-    // apache poi parser for ms excel
-    compile group: 'org.apache.poi', name: 'poi', version: '3.14'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.14'
-
-    // javax servlet library
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
-
-    // jsonpath parser library @ https://github.com/jayway/JsonPath
-    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.2.0'
-
-    // jsoup HTML parser library @ http://jsoup.org/
-    // compile 'org.jsoup:jsoup:1.9.2'
-
-    // activemq
-    compile ('org.apache.activemq:activemq-all:5.4.3') {
-        exclude module: 'kahadb'
-        exclude module: 'activemq-camel'
-        exclude module: 'activemq-console'
-        exclude module: 'activemq-optional'
-        exclude group: 'org.apache.geronimo.specs', module:'geronimo-annotation_1.0_spec'
+    repositories {
+        // By default, mavenLocal() queries maven settings according to the specific orders below.
+        // "USER_HOME/.m2/settings.xml >> M2_HOME/conf/settings.xml >> USER_HOME/.m2/repository"
+        //
+        // Under the *nix/macOS environments, you could make a soft link to your local maven settings like this:
+        // "ln -s /Users/[username]/Applications/Maven/3.0.5/conf/settings.xml /Users/[username]/.m2/settings.xml"
+        //
+        // Follow the tips above, you will absolutely resolve the unreachable problem of mavenLocal().
+        mavenLocal()
+        mavenCentral()
+        // jcenter() // jcenter maven repository may not be connected sometimes because of network issues in China.
     }
 
-    // jedis
-    compile group: 'redis.clients', name: 'jedis', version: '2.8.2'
-
-    // local library of project
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    // junit
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-}
-
-test {
-    useJUnit()
-    filter {
-        //include all tests from test suites
-        includeTestsMatching "*Suite"
+    // 定义依赖库
+    dependencies {
+//        compile rootProject.ext.dependencies['slf4j']
+//        testCompile rootProject.ext.dependencies['junit']
     }
-    testLogging {
-        // Show that tests are run in the command-line output
-        events 'started', 'passed'
-    }
-    reports.html.enabled = false
 }
