--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 
 apply from: 'base/config.gradle'
 
-// sourceCompatibility = 1.6
-
 subprojects {
     apply plugin: 'java'
+
+    sourceCompatibility = 1.6
 
     repositories {
         // By default, mavenLocal() queries maven settings according to the specific orders below.
